# testgeard

./: .gitignore  COPYING  README  configure.ac
man/: Makefile.am  testgeard.1
src/: .gitignore  Makefile  Makefile.am  command-manager.c  connection-manager.c  daemon.c  list.c  log.c  main.c  message.c  options.c  plugin-manager.c  plugin.c  tcp.c
src/bash-completion/: testgeard
src/include/testgear/: command-manager.h  config.h  connection-manager.h  daemon.h  debug.h  list.h  log.h  message.h  options.h  plugin-manager.h  plugin.h  tcp.h
src/plugins/: Makefile  audio.c  dummy.c  fb.c  shell.c
