AC_PREREQ([2.68])
AC_INIT([testgeard], [0.2], [], [testgeard], [http://github.com/testgear/testgeard])
AC_CONFIG_HEADERS([src/include/config.h])
AM_INIT_AUTOMAKE([1.11 foreign dist-xz no-dist-gzip -Wall -Werror])
AM_SILENT_RULES([yes])
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR
AC_LANG([C])
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_CONFIG_FILES([man/Makefile])
AC_OUTPUT
